Task: Added how the internet works content

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
         </div>
     </nav>
     <!--Hero Image-->
-        <div class="hero-image">
-            <div class="hero-text">
-                <h1>Take a tour on about the internet</h1>
-                <p>Click on the desired section to start with from the carousel below...</p>
-                <button type="button" class="btn btn-primary">Click</button>
-                <button type="button" class="btn btn-primary">Click2</button>
-            </div>
+    <div class="hero-image">
+        <div class="hero-text">
+            <h1>Take a tour on about the internet</h1>
+            <p>Click on the desired section to start with from the carousel below...</p>
+            <a type="button" class="btn btn-primary" href="docs/content/doc_com.html">Click</a>
+            <a type="button" class="btn btn-primary" href="docs/content/part1.html">Click2</a>
         </div>
+    </div>
     <!--Carousel-->
 <!--    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">-->
 <!--        <ol class="carousel-indicators">-->
