Task: Added style for about, made consistent formatting

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#history">History of the Internet</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="docs/content/doc_com.html">History of the Internet</a></li>
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li> -->
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#how">How the Internet Works</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="docs/content/part1.html">How the Internet Works</a></li>
                 </ul>
             </div>
         </div>
@@ -37,10 +37,10 @@
     <!--Hero Image-->
     <div class="hero-image">
         <div class="hero-text">
-            <h1>Take a tour on about the internet</h1>
-            <p>Click on the desired section to start with from the carousel below...</p>
-            <a type="button" class="btn btn-primary" href="docs/content/doc_com.html">Click</a>
-            <a type="button" class="btn btn-primary" href="docs/content/part1.html">Click2</a>
+            <h1>Take a tour about the internet</h1>
+            <p>Click on the desired section to start the tour...</p>
+            <a type="button" class="btn btn-primary" href="docs/content/doc_com.html">History of the Internet</a>
+            <a type="button" class="btn btn-primary" href="docs/content/part1.html">How the Internet Works</a>
         </div>
     </div>
     <!--Carousel-->
