--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 <!--            <span class="sr-only">Next</span>-->
 <!--        </a>-->
 <!--    </div>-->
+
     <!-- Contact-->
     <section class="page-section" id="contact">
         <div class="container">
@@ -86,8 +87,8 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-                    <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                    <div>+1 (555) 123-4567</div>
+                    <i class="fab fa-github fa-3x mb-3 text-muted"></i>
+                    <a class="d-block" href="https://github.com/urasurasuras/">https://github.com/urasurasuras/</a>
                 </div>
                 <div class="col-lg-4 mr-auto text-center">
                     <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
@@ -97,10 +98,10 @@
             </div>
         </div>
     </section>
-        <!-- Footer-->
-        <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - Uras Oran</div></div>
-        </footer>
+    <!-- Footer-->
+    <footer class="bg-light py-5">
+        <div class="container"><div class="small text-center text-muted">Copyright © 2020 - Uras Oran</div></div>
+    </footer>
         <!-- Bootstrap core JS-->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
