--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <link href="css/styles.css" rel="stylesheet" />
         
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-7V1R1BG8ZD"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-MWVKGXBW0W"></script>
         <script>
           window.dataLayer = window.dataLayer || [];
           function gtag(){dataLayer.push(arguments);}
           gtag('js', new Date());
 
-          gtag('config', 'G-7V1R1BG8ZD');
+          gtag('config', 'G-MWVKGXBW0W');
         </script>
         
     </head>
